--- a/PublicTemplates/kavemans.dev/src/styles/devlog.css
+++ b/PublicTemplates/kavemans.dev/src/styles/devlog.css
@@ -8,7 +8,7 @@ body > .header {
   background-position: -75px 80%;
   background-size: 250px;
   background-color: #0a0f16;
-  background-image: linear-gradient(-90deg, #0a0f16 1%, #00000000 90%), url("./../sprites/frontSampleBackground.jpg");
+  background-image: linear-gradient(-90deg, #0a0f16 1%, #00000000 90%), url("/src/images/RTX_Halloween.webp");
   background-repeat: no-repeat;
   z-index: 1;
   position: fixed;
