--- a/PublicTemplates/kavemans.dev/src/styles/framework.css
+++ b/PublicTemplates/kavemans.dev/src/styles/framework.css
@@ -16,6 +16,14 @@
          url('./../fonts/OpenSans/Light.ttf') format('truetype');
 }
 
+/* Poppins font... not used
+@font-face{
+	font-family: 'Poppins';
+	src: url('/src/fonts/Poppins/Light.ttf');
+	src: local('Poppins'),
+         url('/src/fonts/Poppins/Light.ttf') format('truetype');
+}*/
+
 html, body {
     min-height: 100vh;
     width: 100%;
