--- a/PublicTemplates/kavemans.dev/src/styles/projectOverrides.css
+++ b/PublicTemplates/kavemans.dev/src/styles/projectOverrides.css
@@ -79,7 +79,7 @@ main {
   max-height: 1000%;
 }
 
-.lessonItem {
+.projectEntry {
   --size: 80px;
   --border-radius: 6px;
   --background-color: rgb(31, 38, 49);
@@ -101,17 +101,17 @@ main {
   position: relative;
 }
 
-.lessonItem:hover { --background-color: #242d3c; }
+.projectEntry:hover { --background-color: #242d3c; }
 
-.lessonItem .content,
-.lessonItem::after {
+.projectEntry .content,
+.projectEntry::after {
   position: absolute;
   top: 0;
   transition: all 200ms ease-in-out;
   content: "";
 }
 
-.lessonItem::after {
+.projectEntry::after {
   height: 100%;
   width: 100%;
   content: "";
@@ -120,12 +120,11 @@ main {
   box-shadow: inset rgb(58 66 80 / 80%) 0 0 0 1px;
 }
 
-.lessonItem:hover::after {
+.projectEntry:hover::after {
   box-shadow: inset rgb(58 66 80 / 80%) 0 0 0 3px;
 }
 
-.lessonItem > img {
-  object-fit: cover;
+.projectEntry > .graphic {
   width: var(--graphic-width);
   height: var(--graphic-height);
   position: absolute;
@@ -133,11 +132,44 @@ main {
   left: 0;
   transition: all 200ms ease-in-out;
   border-radius: var(--border-radius) 0 0 var(--border-radius);
+  overflow: hidden;
+  background-color: rgba(10, 15, 22, 0.8);
 }
 
-.lessonItem:hover > img { box-shadow: rgb(58 66 80 / 80%) 2px 0 0 0; }
+.projectEntry > .graphic::before {
+  height: 100%;
+  width: 100%;
+  content: "No Image";
+  font-size: 12pt;
+  color: rgba(255, 255, 255, 0.5);
+  /*color: rgb(58 66 80 / 80%);*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+}
 
-.lessonItem > .content {
+.projectEntry > .graphic > img:nth-child(1) { display: none; }
+
+.projectEntry > .graphic > *:not(:nth-child(1)) {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: #000;
+  color: #fff;
+  object-fit: cover;
+}
+
+.projectEntry > .graphic > img:not(:nth-child(1)) { object-fit: cover; }
+
+.projectEntry:hover > .graphic { box-shadow: rgb(58 66 80 / 80%) 2px 0 0 0; }
+
+.projectEntry > .content {
   height: var(--content-height);
   width: var(--content-width);
   padding: 5px 8px;
@@ -146,7 +178,7 @@ main {
   text-shadow: #000 0 0 3px;
 }
 
-.lessonItem > .content > .title {
+.projectEntry > .content > .title {
   font-weight: bold;
   overflow: hidden;
   white-space: normal;
@@ -154,7 +186,7 @@ main {
   cursor: pointer;
 }
 
-.lessonItem > .content > .labels > .label {
+.projectEntry > .content > .labels > .label {
   display: inline-block;
   object-fit: contain;
   --size: 18pt;
@@ -164,15 +196,16 @@ main {
   text-align: left;
 }
 
-.lessonItem > .content > .labels > .label > img {
+.projectEntry > .content > .labels > .label > img {
   position: absolute;
   height: var(--size);
   width: auto;
   position: absolute; 
   top: -1pt;
+  filter: drop-shadow(0 0 3px #000);
 }
 
-.lessonItem > .content > .description { 
+.projectEntry > .content > .description { 
   overflow: hidden;
   white-space: normal;
   text-overflow: ellipsis;
@@ -184,7 +217,7 @@ main {
 
 
 @media (max-width: 765px), (orientation: portrait) {
-  .lessonItem { 
+  .projectEntry { 
     --graphic-height: 200px;
     --graphic-width: 100%;
     --content-height: 122.5px;
@@ -194,7 +227,7 @@ main {
     height: auto;
   }
 
-  .lessonItem > .content {
+  .projectEntry > .content {
     width: 100%;
     height: 122.5px;
     top: 0;/*var(--graphic-height);*/
@@ -203,10 +236,8 @@ main {
     /*backdrop-filter: blur(3px);*/
     position: relative;
   }
-
-  .lessonItem > .content > .description { -webkit-line-clamp: 4; }
   
-  .lessonItem > img {
+  .projectEntry > .graphic {
     /* For gradient effect: Didn't look good enough so disabled it
     --mask: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
     -webkit-mask-image: var(--mask);
@@ -216,9 +247,31 @@ main {
     /* Effect: Make the thumbnail as background */
     border-radius: var(--border-radius) var(--border-radius) 0 0;
     position: relative;
+    overflow: hidden;
+    height: auto;
   }
 
-  .lessonItem:hover > img { box-shadow: rgb(58 66 80 / 80%) 0 2px 0 0; }
+  .projectEntry > .content > .description { -webkit-line-clamp: 4; }
+
+  .projectEntry > .graphic > img:nth-child(1) { 
+    width: 100%;
+    height: auto;
+    opacity: 0;
+    display: block;
+  }
+  
+  .projectEntry > .graphic > *:not(:nth-child(1)) {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #000;
+    color: #fff;
+    object-fit: cover;
+  }
+
+  .projectEntry:hover > .graphic { box-shadow: rgb(58 66 80 / 80%) 0 2px 0 0; }
 }
 
 .label .tooltiptext {
