--- a/PublicTemplates/kavemans.dev/src/styles/projectOverrides.css
+++ b/PublicTemplates/kavemans.dev/src/styles/projectOverrides.css
@@ -21,6 +21,10 @@ main {
   }
 }
 
+:root {
+  --animation-duration: 200ms;
+}
+
 .subProjectEntry {
   height: auto;
   min-height: 40px;
@@ -87,11 +91,14 @@ main {
   --graphic-width: 120px;
   --content-height: 100%;
   --content-width: calc(100% - var(var(--graphic-width)));
+  --border-width: 1px;
+  --border-color: #f00;
+  --inner-border-width: 1px;
   height: var(--size);
   max-height: var(--size);
   border-radius: var(--border-radius);
   background-color: #242d3c;
-  transition: all 200ms ease-in-out;
+  transition: all var(--animation-duration) ease-in-out;
   margin: 10px 0;
   background-position: 0 60%;
   background-size: 120px 100%;
@@ -101,13 +108,17 @@ main {
   position: relative;
 }
 
-.projectEntry:hover { --background-color: #242d3c; }
+.projectEntry:hover {
+  --background-color: #242d3c;
+  --border-width: 3px;
+  --inner-border-width: 2px;
+}
 
 .projectEntry .content,
 .projectEntry::after {
   position: absolute;
   top: 0;
-  transition: all 200ms ease-in-out;
+  transition: all var(--animation-duration) ease-in-out;
   content: "";
 }
 
@@ -117,11 +128,7 @@ main {
   content: "";
   border-radius: var(--border-radius);
   pointer-events: none;
-  box-shadow: inset rgb(58 66 80 / 80%) 0 0 0 1px;
-}
-
-.projectEntry:hover::after {
-  box-shadow: inset rgb(58 66 80 / 80%) 0 0 0 3px;
+  box-shadow: inset rgb(58 66 80 / 80%) 0 0 0 var(--border-width);
 }
 
 .projectEntry > .graphic {
@@ -130,9 +137,8 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  transition: all 200ms ease-in-out;
+  transition: all var(--animation-duration) ease-in-out;
   border-radius: var(--border-radius) 0 0 var(--border-radius);
-  overflow: hidden;
   background-color: rgba(10, 15, 22, 0.8);
 }
 
@@ -152,6 +158,7 @@ main {
   top: 0;
 }
 
+
 .projectEntry > .graphic > img:nth-child(1) { display: none; }
 
 .projectEntry > .graphic > *:not(:nth-child(1)) {
@@ -167,7 +174,20 @@ main {
 
 .projectEntry > .graphic > img:not(:nth-child(1)) { object-fit: cover; }
 
-.projectEntry:hover > .graphic { box-shadow: rgb(58 66 80 / 80%) 2px 0 0 0; }
+.projectEntry > .graphic::after {
+  position: absolute;
+  bottom: var(--border-width);
+  height: calc(100% - calc(var(--border-width) * 2));
+  width: 1px;
+  right: 0;
+  /*background-color: #f00;*/
+  content: '';
+  object-fit: cover;
+  transition: box-shadow var(--animation-duration) ease-in-out,
+    height var(--animation-duration) ease-in-out,
+    top var(--animation-duration) ease-in-out;
+  box-shadow: rgb(58 66 80 / 80%) var(--inner-border-width) 0 0 0;
+}
 
 .projectEntry > .content {
   height: var(--content-height);
@@ -247,8 +267,20 @@ main {
     /* Effect: Make the thumbnail as background */
     border-radius: var(--border-radius) var(--border-radius) 0 0;
     position: relative;
-    overflow: hidden;
     height: auto;
+  }
+
+  .projectEntry > .graphic::after {
+    position: absolute;
+    bottom: 0px;
+    right: var(--border-width);
+    margin-left: var(--border-width);
+    width: calc(100% - calc(var(--border-width) * 2));
+    height: 1px;
+    box-shadow: rgb(58 66 80 / 80%) 0 var(--inner-border-width) 0 0;
+    display: inline-block;
+    transition: box-shadow var(--animation-duration) ease-in-out,
+      width var(--animation-duration) ease-in-out;
   }
 
   .projectEntry > .content > .description { -webkit-line-clamp: 4; }
@@ -270,8 +302,6 @@ main {
     color: #fff;
     object-fit: cover;
   }
-
-  .projectEntry:hover > .graphic { box-shadow: rgb(58 66 80 / 80%) 0 2px 0 0; }
 }
 
 .label .tooltiptext {
