--- a/PublicTemplates/kavemans.dev/src/styles/projectOverrides.css
+++ b/PublicTemplates/kavemans.dev/src/styles/projectOverrides.css
@@ -14,7 +14,6 @@ main {
     var(--background-image);
 }
 
-
 @media (max-width: 765px), (orientation: portrait) {
   main {
     background-position-x: 50%;
@@ -140,6 +139,7 @@ main {
   transition: all var(--animation-duration) ease-in-out;
   border-radius: var(--border-radius) 0 0 var(--border-radius);
   background-color: rgba(10, 15, 22, 0.8);
+  overflow: hidden;
 }
 
 .projectEntry > .graphic::before {
@@ -158,6 +158,7 @@ main {
   top: 0;
 }
 
+.projectEntry > .graphic > img { border-radius: var(--border-radius) 0 0 var(--border-radius); }
 
 .projectEntry > .graphic > img:nth-child(1) { display: none; }
 
@@ -174,19 +175,19 @@ main {
 
 .projectEntry > .graphic > img:not(:nth-child(1)) { object-fit: cover; }
 
-.projectEntry > .graphic::after {
+.projectEntry > .content::before {
   position: absolute;
   bottom: var(--border-width);
   height: calc(100% - calc(var(--border-width) * 2));
-  width: 1px;
-  right: 0;
+  width: var(--inner-border-width);
+  left: 0;
   /*background-color: #f00;*/
   content: '';
   object-fit: cover;
   transition: box-shadow var(--animation-duration) ease-in-out,
     height var(--animation-duration) ease-in-out,
     top var(--animation-duration) ease-in-out;
-  box-shadow: rgb(58 66 80 / 80%) var(--inner-border-width) 0 0 0;
+  box-shadow: inset rgb(58 66 80 / 80%) var(--inner-border-width) 0 0 0;
 }
 
 .projectEntry > .content {
@@ -214,6 +215,7 @@ main {
   width: 14pt;
   position: relative;
   text-align: left;
+  margin-left: 5px;
 }
 
 .projectEntry > .content > .labels > .label > img {
@@ -223,6 +225,11 @@ main {
   position: absolute; 
   top: -1pt;
   filter: drop-shadow(0 0 3px #000);
+  transition: filter var(--animation-duration) ease-in-out;
+}
+
+.projectEntry > .content > .labels > .label:hover > img {
+  filter: drop-shadow(0 0 5px #000) ;
 }
 
 .projectEntry > .content > .description { 
@@ -270,14 +277,16 @@ main {
     height: auto;
   }
 
-  .projectEntry > .graphic::after {
+  .projectEntry > .graphic > img { border-radius: var(--border-radius) var(--border-radius) 0 0; }
+
+  .projectEntry > .content::before {
     position: absolute;
-    bottom: 0px;
+    top: 0px;
     right: var(--border-width);
     margin-left: var(--border-width);
     width: calc(100% - calc(var(--border-width) * 2));
-    height: 1px;
-    box-shadow: rgb(58 66 80 / 80%) 0 var(--inner-border-width) 0 0;
+    height: var(--inner-border-width);
+    box-shadow: inset rgb(58 66 80 / 80%) 0 var(--inner-border-width) 0 0;
     display: inline-block;
     transition: box-shadow var(--animation-duration) ease-in-out,
       width var(--animation-duration) ease-in-out;
