--- a/PublicTemplates/kavemans.dev/src/styles/main.css
+++ b/PublicTemplates/kavemans.dev/src/styles/main.css
@@ -4,7 +4,7 @@ main {
   min-height: 80vh;
   background-image: 
     /*linear-gradient(0deg, black 1%, transparent 10%),*/
-    url('./../images/RTX_Halloween.webp');
+    url('/src/images/TankiX/MadnessUpdate/SpookyMadness.webp');
     background-position: center 100%;
   position: relative;
 }
@@ -212,7 +212,7 @@ main .credits {
   background-color: #212937;
   border-radius: 6px;
   transition: all 200ms;
-  margin-bottom: 8px;
+  margin-bottom: 12px;
   /*background-image:
     linear-gradient(rgba(255, 255, 255, .1) .1em, transparent .1em),
     linear-gradient(90deg, rgba(255, 255, 255, .1) .1em, transparent .1em);
@@ -250,7 +250,7 @@ main .credits {
   margin: 15px 15px 0 15px;
 }
 
-#projects .row a {
+#projects .row > a {
   font-size: 1em;
   font-weight: bold;
   padding-right: 5px;
@@ -266,10 +266,14 @@ main .credits {
 }
 
 #projects .row span {
+  min-height: 40px;
+}
+
+#projects .row span,
+#projects .row p {
   font-size: 1em;
   font-weight: normal;
   top: 15px;
-  min-height: 40px;
   height: auto;
   display: block;
   margin: 0;
@@ -337,7 +341,7 @@ main .credits {
     height: auto;
   }
 
-  #projects .row a {
+  #projects .row > a {
     font-size: 1em;
     font-weight: bold;
     padding-top: 10px;
@@ -347,7 +351,7 @@ main .credits {
     cursor: pointer;
   }
   
-  #projects .row img {
+  #projects .row > img {
     height: 20px;
     width: 20px;
     margin: 10px 10px 0 15px;
