--- a/PublicTemplates/kavemans.dev/orgs/TechAcademy/Calculator/style.css
+++ b/PublicTemplates/kavemans.dev/orgs/TechAcademy/Calculator/style.css
@@ -11,7 +11,7 @@
 
 @font-face {
 	font-family: "Seven Segment";
-	src: url('/tta/beeper/Seven Segment.ttf');
+	src: url('/src/fonts/SevenSegment/Regular.ttf');
 }
 
 html, body {
