TTA Content Update
 + Added 'disabled` support for links and fixed all broken links to contain this attribute
 + Fixed Car Insurance Demo Buttons
 + Added descriptions where needed
 + Fixed Links where it was inaccurate or missing
 + Added Previews where missing or required update

--- a/PublicTemplates/kavemans.dev/src/styles/framework.css
+++ b/PublicTemplates/kavemans.dev/src/styles/framework.css
@@ -135,7 +135,13 @@ a {
     color: #00baff;
 }
 
-a:hover {
+a[disabled] {
+    color: #cacaca;
+    cursor: text;
+    pointer-events: none;
+}
+
+a:not([disabled]):hover {
     text-decoration: underline;
 }
 
