Hotfixes from Prod Test
 + Remove underline for nav
 + Added Byte as SQLite type Integer

--- a/PublicTemplates/kavemans.dev/src/styles/common.css
+++ b/PublicTemplates/kavemans.dev/src/styles/common.css
@@ -21,7 +21,7 @@ header .logo {
   justify-content: center;
   align-items: center;
   text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 header .logo::before {
