--- a/PublicTemplates/kavemans.dev/src/styles/common.css
+++ b/PublicTemplates/kavemans.dev/src/styles/common.css
@@ -64,7 +64,7 @@ header nav a {
 
 header nav a:hover {
   color: rgba(255, 255, 255, 1);
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 main, .container {
