Mobile Visual Patches
 + Prevented overflow from projects (popovers caused width to be >100vw)
 + Project Badges are now on a new line for mobile and smaller screens
 + Fixed Navbar background image on Projects page

--- a/PublicTemplates/kavemans.dev/src/styles/orgOverrides.css
+++ b/PublicTemplates/kavemans.dev/src/styles/orgOverrides.css
@@ -299,7 +299,9 @@ main {
       width var(--animation-duration) ease-in-out;
   }
 
-  .projectEntry > .content > .description { -webkit-line-clamp: 4; }
+  .projectEntry > .content > .labels { display: block; }
+
+  .projectEntry > .content > .description { -webkit-line-clamp: 3; }
 
   .projectEntry > .graphic > img:nth-child(1) { 
     width: 100%;
