--- a/PublicTemplates/kavemans.dev/src/styles/framework.css
+++ b/PublicTemplates/kavemans.dev/src/styles/framework.css
@@ -220,3 +220,5 @@ body::-webkit-scrollbar-thumb {
     border-radius: 6px;
     border: 3px solid var(--scrollbarBG);
 }
+
+.strongTextShadow { text-shadow: #000 0 0 5px, #000 0 0 5px, #000 0 0 5px;}
